# chezmage

./: .gitignore  .gitleaksignore  .octocov.yml  .tagpr  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  mise.toml  rust-toolchain.toml
.claude/: settings.json  statusline-command.sh
.claude/skills/deps-sync/: SKILL.md
.claude/skills/deps-sync-tests/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: module-and-project-structure.md  testing-patterns.md
.devcontainer/: Caddyfile  devcontainer.json  jaeger-config.yaml  o2-import-dashboards.sh  postStartCommand.sh
.github/: labeler.yml  labels.json  project-config.json  release-manager-pr-template.md  tagpr-template.md
.github/actions/act-audit/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/actions/create-release/: action.yaml
.github/actions/upload-release-assets/: action.yaml
.github/rulesets/: tags.json
.github/workflows/: _orchestrator.yaml  audit.yaml  cleanup.yaml  docs-ci.yaml  gh-sync.yaml  release-build.yaml  release-manager.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: tasks.toml
ast-rules/: _rules.md  no-get-prefix.yml  no-real-ipv4.yml
crates/chezmage/: Cargo.toml
crates/chezmage/src/: main.rs  telemetry.rs  wrapper.rs
docs/: project_rules.md
examples/: dot_chezmoi.toml.tmpl
src/: config.rs  exec.rs  gpg.rs  main.rs  secure.rs  shim.rs  test_utils.rs  wrapper.rs
tests/: integration_test.rs
